SERVER-58083 Correct the assertion that the stable timestamp is at least the all durable value